--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -166,6 +166,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="다음"
+            android:textSize="20sp"
+            android:layout_marginTop="56dp"
+            android:layout_marginBottom="31dp"/>
 
 
 
